test_suite/tests/ui/remote/bad_getter.stderr
error: failed to parse path: "~~~"
  --> $DIR/bad_getter.rs:12:22
   |
12 |     #[serde(getter = "~~~")]
   |                      ^^^^^
